--- a/haskaml.cabal
+++ b/haskaml.cabal
@@ -65,13 +65,15 @@ executable haskaml
     main-is:          Main.hs
 
     -- Modules included in this executable, other than Main.
-    -- other-modules:
+    other-modules:    Parser, SubInterpreter
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
 
     -- Other library packages from which modules are imported.
-    build-depends:    base ^>=4.19.0.0
+    build-depends:    base ^>=4.19.0.0,
+                      parsec >= 3.1.14.0,
+    -- text >= 1.2.4.1
 
     -- Directories containing source files.
     hs-source-dirs:   app
